--- a/src/In a Bit.html
+++ b/src/In a Bit.html
@@ -14,17 +14,14 @@
 
 <body>
 	<main class="content-container">
-		<h1>Welcome to your final project (Home Page test)!</h1>
+		<h1>Welcome to your final project (In A Bit-test)!</h1>
 	</main>
 	<!--
 		This is where you should link your JS file.
 	-->
-
-	<ul><a href="Fine.html" class="button-link-Fine">Button to Fine</a></ul>
-	<ul><a href="Later.html" class="button-link-Later">Button to Later</a></ul>
-	<ul><a href="Tomorrow.html" class="button-link-Tomorrow">Button to Tomorrow</a></ul>
-	<ul><a href="In a Bit.html" class="button-link-InABit">Button to In a Bit</a></ul>
-
+	<a href="index.html" class="button-link">Button to HOME</a>
 
 </body>
+
 </html>
+	
