--- a/src/Fine.html
+++ b/src/Fine.html
@@ -1,108 +1,101 @@
-<!DOCTYPE html>
-<html lang="en">
+    <!-- index.html -->
 
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Update your description here" />
-	<title>Update your title here</title>
-	<!--
-		This is where you should link your CSS file.
-	-->
-	<link rel = "stylesheet" href = "css/fineStyle.css">
-</head>
+	 <!DOCTYPE html>
+	 <html lang="en">
 
-<body>
-	<main class="content-container">
-		<h1>Welcome to your final project (Fine-test)!</h1>
-	</main>
-	<!--
-		This is where you should link your JS file.
-	-->
+	 <head>
+		<meta charset="UTF-8">
+		<meta name="viewport"
+		content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="./style.css">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Alata&family=Caveat:wght@400..700&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Odibee+Sans&display=swap" rel="stylesheet">
+		<title>"Dynamic Calendar"</title>
+		<link rel = "stylesheet" href = "css/fineStyle.css"/>
 
-	<a href="index.html" class="button-link">Button to HOME</a>
+	 </head>
 
-	<!--Code for calendar-->
+	 <body>
+		 <!-- Main wrapper for the calendar application -->
+		 <div class="wrapper">
+			 <div class="container-calendar">
+				 <div id="left">
+					 <h1>"Intuitive" Calendar</h1>
+					 <div id="event-section">
+						 <h3>Add Event</h3>
+						 <input type="date" id="eventDate">
+						 <input type="text"
+							 id="eventTitle"
+							 placeholder="Event Title">
+						 <input type="text"
+							 id="eventDescription"
+							 placeholder="Event Description">
+						 <button id="addEvent" onclick="addEvent()">
+							 Add
+						 </button>
+					 </div>
+					 <div id="reminder-section">
+						 <h3>Reminders</h3>
+						 <!-- List to display reminders -->
+						 <ul id="reminderList">
+							 <li data-event-id="1">
+								 <strong>Event Title</strong>
+								 - Event Description on Event Date
+								 <button class="delete-event"
+									 onclick="deleteEvent(1)">
+									 Delete
+								 </button>
+							 </li>
+						 </ul>
+					 </div>
+				 </div>
+				 <div id="right">
+					 <h3 id="monthAndYear"></h3>
+					 <div class="button-container-calendar">
+						 <button id="previous"
+								 onclick="previous()">
+							 ‹
+						 </button>
+						 <button id="next"
+								 onclick="next()">
+							 ›
+						 </button>
+					 </div>
+					 <table class="table-calendar"
+						 id="calendar"
+						 data-lang="en">
+						 <thead id="thead-month"></thead>
+						 <!-- Table body for displaying the calendar -->
+						 <tbody id="calendar-body"></tbody>
+					 </table>
+					 <div class="footer-container-calendar">
+						 <label for="month">Jump To: </label>
+						 <!-- Dropdowns to select a specific month and year -->
+						 <select id="month" onchange="jump()">
+							 <option value=0>Jan</option>
+							 <option value=1>Feb</option>
+							 <option value=2>Mar</option>
+							 <option value=3>Apr</option>
+							 <option value=4>May</option>
+							 <option value=5>Jun</option>
+							 <option value=6>Jul</option>
+							 <option value=7>Aug</option>
+							 <option value=8>Sep</option>
+							 <option value=9>Oct</option>
+							 <option value=10>Nov</option>
+							 <option value=11>Dec</option>
+						 </select>
+						 <!-- Dropdown to select a specific year -->
+						 <select id="year" onchange="jump()"></select>
+					 </div>
+				 </div>
+			 </div>
+		 </div>
+		 <!-- Include the JavaScript file for the calendar functionality -->
+		 <script src="./script.js"></script>
+		 <link rel = "JavaScript" href = "js/fineScripts.js"/>
 
-	<!-- Main wrapper for the calendar application -->
-	<div class="wrapper">
-		<div class="container-calendar">
-			<div id="left">
-				<h1>Dynamic Calendar</h1>
-				<div id="event-section">
-					<h3>Add Event</h3>
-					<input type="date" id="eventDate">
-					<input type="text"
-						id="eventTitle"
-						placeholder="Event Title">
-					<input type="text"
-						id="eventDescription"
-						placeholder="Event Description">
-					<button id="addEvent" onclick="addEvent()">
-						Add
-					</button>
-				</div>
-				<div id="reminder-section">
-					<h3>Reminders</h3>
-					<!-- List to display reminders -->
-					<ul id="reminderList">
-						<li data-event-id="1">
-							<strong>Event Title</strong>
-							- Event Description on Event Date
-							<button class="delete-event"
-								onclick="deleteEvent(1)">
-								Delete
-							</button>
-						</li>
-					</ul>
-				</div>
-			</div>
-			<div id="right">
-				<h3 id="monthAndYear"></h3>
-				<div class="button-container-calendar">
-					<button id="previous"
-							onclick="previous()">
-						‹
-					</button>
-					<button id="next"
-							onclick="next()">
-						›
-					</button>
-				</div>
-				<table class="table-calendar"
-					id="calendar"
-					data-lang="en">
-					<thead id="thead-month"></thead>
-					<!-- Table body for displaying the calendar -->
-					<tbody id="calendar-body"></tbody>
-				</table>
-				<div class="footer-container-calendar">
-					<label for="month">Jump To: </label>
-					<!-- Dropdowns to select a specific month and year -->
-					<select id="month" onchange="jump()">
-						<option value=0>Jan</option>
-						<option value=1>Feb</option>
-						<option value=2>Mar</option>
-						<option value=3>Apr</option>
-						<option value=4>May</option>
-						<option value=5>Jun</option>
-						<option value=6>Jul</option>
-						<option value=7>Aug</option>
-						<option value=8>Sep</option>
-						<option value=9>Oct</option>
-						<option value=10>Nov</option>
-						<option value=11>Dec</option>
-					</select>
-					<!-- Dropdown to select a specific year -->
-					<select id="year" onchange="jump()"></select>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- Include the JavaScript file for the calendar functionality -->
-	<!--<script src="./script.js"></script>-->
+	 </body>
+	 </html>
 
-</body>
-
-</html>
