--- a/src/Later.html
+++ b/src/Later.html
@@ -1,48 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Update your description here" />
-	<title>Update your title here</title>
-	<!--
-		This is where you should link your CSS file.
-	-->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Odibee+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Alata&family=Caveat:wght@400..700&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Odibee+Sans&display=swap" rel="stylesheet">
+
+    <title>Advanced Alarm Clock</title>
+	 <link rel = "stylesheet" href = "css/later.css"/>
+
 </head>
-
 <body>
-	<main class="content-container">
-		<h1>Welcome to your final project (Later-test)!</h1>
-	</main>
-	<!--
-		This is where you should link your JS file.
-	-->
-
-	<a href="index.html" class="button-link">Button to HOME</a>
-
-	<!--Code for post it notes-->
-
-	<div class = "main-container">
-		<div class = "container1">
-		  <button class="button" onclick = "typeNote()"> Create Note</button>
-		</div>
-		<div class = "container2"></div>
-		<div class = "container3">
-		<form>
-		  <textarea id = "note-text" placeholder = "Note it..." maxlength = "96"></textarea>
-		  <svg id= "check-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-circle" viewBox="0 0 16 16">
-	 <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
-	 <path d="m10.97 4.97-.02.022-3.473 4.425-2.093-2.094a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05"/>
-  </svg>
-		  <svg id = "x-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-ban" viewBox="0 0 16 16">
-	 <path d="M15 8a6.97 6.97 0 0 0-1.71-4.584l-9.874 9.875A7 7 0 0 0 15 8M2.71 12.584l9.874-9.875a7 7 0 0 0-9.874 9.874ZM16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0"/>
-  </svg>
-		</form>
-		</div>
-	 </div>
-
+    <div class="clock">
+        <h1>We'll help</h1>
+        <h3>Because clearly you can't remember by yourself...</h3>
+        <div class="time" id="time">00:00:00</div>
+        <div class="input-row">
+            <div class="input-field">
+                <label for="meeting-time">Choose a time for your appointment:</label>
+                <input type="datetime-local" id="meeting-time" name="meeting-time" value="" min="" max="" class="alarm-input">
+            </div>
+            <div class="input-field">
+                <label for="taskName">Task Name:</label>
+                <input type="text" id="taskName" class="alarm-input" placeholder="Enter task name">
+            </div>
+            <button id="setAlarm">Set Alarm</button>
+        </div>
+        <div class="alarms" id="alarms"></div>
+    </div>
+    <script src="script.js"></script>
 </body>
-
 </html>
