--- a/src/index.html
+++ b/src/index.html
@@ -12,14 +12,14 @@
   <div class="main">
     <div class="up">
 		<a href="Fine.html" class="card-link">
-			<button class="card1">
+			<button type ="button" class="card1">
 			<svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-calendar-plus-fill" viewBox="0 0 16 16">
 				<path d="M4 .5a.5.5 0 0 0-1 0V1H2a2 2 0 0 0-2 2v1h16V3a2 2 0 0 0-2-2h-1V.5a.5.5 0 0 0-1 0V1H4zM16 14V5H0v9a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2M8.5 8.5V10H10a.5.5 0 0 1 0 1H8.5v1.5a.5.5 0 0 1-1 0V11H6a.5.5 0 0 1 0-1h1.5V8.5a.5.5 0 0 1 1 0"/>
 			</svg>
 			</button>
 		</a>
 		<a href="Tomorrow.html" class="card-link">
-			<button class="card2">
+			<button type = "button" class="card2">
 			<svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-check2-square" viewBox="0 0 16 16">
 				<path d="M3 14.5A1.5 1.5 0 0 1 1.5 13V3A1.5 1.5 0 0 1 3 1.5h8a.5.5 0 0 1 0 1H3a.5.5 0 0 0-.5.5v10a.5.5 0 0 0 .5.5h10a.5.5 0 0 0 .5-.5V8a.5.5 0 0 1 1 0v5a1.5 1.5 0 0 1-1.5 1.5z"/>
 				<path d="m8.354 10.354 7-7a.5.5 0 0 0-.708-.708L8 9.293 5.354 6.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0"/>
@@ -31,18 +31,18 @@
 
 	 <form class="form">
 		<p class="heading">Login</p>
-		<input type="text" placeholder="Email" class="input" /> <!-- New input field for Email -->
+		<input type="email" placeholder="Email" class="input" /> <!-- New input field for Email -->
 		<input type="text" placeholder="Username/Name" class="input"/>
-		<input type="text" placeholder="Password" class="input" />
+		<input type="password" placeholder="Password" class="input" />
 		<div class="button-container-login-register"> <!-- Container for the buttons -->
-		  <button class="btn-register">Register</button>
-		  <button class="btn-login">Login</button>
+		  <button type = "submit" class="btn-register">Register</button>
+		  <button type = "submit" class="btn-login">Login</button>
 		</div>
 	 </form>
 
     <div class="down">
 		<a href="In A Bit.html" class="card-link">
-			<button class="card3">
+			<button type = "button" class="card3">
 				<svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-stickies-fill" viewBox="0 0 16 16">
 					<path d="M0 1.5V13a1 1 0 0 0 1 1V1.5a.5.5 0 0 1 .5-.5H14a1 1 0 0 0-1-1H1.5A1.5 1.5 0 0 0 0 1.5"/>
 					<path d="M3.5 2A1.5 1.5 0 0 0 2 3.5v11A1.5 1.5 0 0 0 3.5 16h6.086a1.5 1.5 0 0 0 1.06-.44l4.915-4.914A1.5 1.5 0 0 0 16 9.586V3.5A1.5 1.5 0 0 0 14.5 2zm6 8.5a1 1 0 0 1 1-1h4.396a.25.25 0 0 1 .177.427l-5.146 5.146a.25.25 0 0 1-.427-.177z"/>
@@ -50,7 +50,7 @@
 			</button>
 		</a>
 		<a href="Later.html" class="card-link">
-			<button class="card4">
+			<button type = "button" class="card4">
 			<svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-alarm-fill" viewBox="0 0 16 16">
 				<path d="M6 .5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1H9v1.07a7.001 7.001 0 0 1 3.274 12.474l.601.602a.5.5 0 0 1-.707.708l-.746-.746A6.97 6.97 0 0 1 8 16a6.97 6.97 0 0 1-3.422-.892l-.746.746a.5.5 0 0 1-.707-.708l.602-.602A7.001 7.001 0 0 1 7 2.07V1h-.5A.5.5 0 0 1 6 .5m2.5 5a.5.5 0 0 0-1 0v3.362l-1.429 2.38a.5.5 0 1 0 .858.515l1.5-2.5A.5.5 0 0 0 8.5 9zM.86 5.387A2.5 2.5 0 1 1 4.387 1.86 8.04 8.04 0 0 0 .86 5.387M11.613 1.86a2.5 2.5 0 1 1 3.527 3.527 8.04 8.04 0 0 0-3.527-3.527"/>
 			</svg>
