final pre submission

--- a/src/Later.html
+++ b/src/Later.html
@@ -18,7 +18,7 @@
 			 <div class="time" id="time">00:00:00</div>
 			 <div class="input-row">
 				  <div class="input-field">
-						<label for="meeting-time">Choose a time for your appointment:</label>
+						<label for="meeting-time">Remeber to remember when your event is.</label>
 						<input type="datetime-local" id="meeting-time" name="meeting-time" value="" min="" max="" class="alarm-input">
 				  </div>
 				  <div class="input-field">
